--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-    <groupId>org.springdoc</groupId>
-    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-    <version>2.3.0</version>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.7.0</version>
+    <scope>test</scope>
 </dependency>
 	</dependencies>
 
