--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,22 @@
     <artifactId>mysql-connector-java</artifactId>
     <scope>runtime</scope>
 </dependency>
-        <dependency>
-    <groupId>org.springdoc</groupId>
-    <artifactId>springdoc-openapi-ui</artifactId>
-    <version>1.6.14</version>
+        <!-- Mockito for unit testing -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>4.11.0</version>
+    <scope>test</scope>
 </dependency>
+
+<!-- Mockito + JUnit integration -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-junit-jupiter</artifactId>
+    <version>4.11.0</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 
     <build>
