--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- MySQL Database -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
